# ClearChain

./: .gitignore  CLAUDE.md  CLEARCHAIN_CONSUMER_REWRITE.md  MEMORY.md  README.md  SPEC.md  TASKS.md  claude-code-prompt-mobile-qa.md  claude-code-prompt-overflow-fixes.md  claude-code-prompt-qa-fixes.md  clearchain-b2c-monetization.docx  clearchain-monetization-v2.docx  clearchain-promo.html  middleware.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  vercel.json
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
components/: AdSlot.tsx  AddToWatchlistButton.tsx  CaseNetworkGraph.tsx  CaseReportPDF.tsx  CodeTabs.tsx  CopyButton.tsx  DocsTOC.tsx  ExportButton.tsx  ExposureBreakdown.tsx  FundFlowDiagram.tsx  HexTicker.tsx  InfoTooltip.tsx  NarrativeCard.tsx  RiskScoreCard.tsx  SARDraftCard.tsx  ScoreModal.tsx  SimulatorCard.tsx  SiteNav.tsx  SkeletonLoader.tsx  TerminalLoader.tsx  TiltCard.tsx  TransactionBreakdown.tsx  TransactionGraph.tsx  TransactionTimeline.tsx  TypologyCard.tsx  WaitlistBar.tsx
data/: ofac-eth-addresses.json  ofac-sol-addresses.json  ofac-trx-addresses.json  typologies.json
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
lib/: analyze-pipeline.ts  apikeys.ts  bitcoin.ts  claude.ts  etherscan.ts  intel-articles.tsx  labels.ts  ofac.ts  sar.ts  scoring-sol.ts  scoring.ts  solana.ts  tron.ts  types.ts  typology.ts  useCountUp.ts  utils.ts  webhook.ts
mcp-server/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
prompts/: 17-custom-risk-profiles.md  (+6 more)
sdks/python/: README.md  pyproject.toml
sdks/python/clearchain/: __init__.py  client.py  errors.py  models.py
sdks/python/clearchain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+55 files in other folders)
