[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clearchain"
version = "1.0.0"
description = "Official Python SDK for the ClearChain AML intelligence API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Rafael Velasquez", email = "velasquez.b.rafael@gmail.com" }]
keywords = ["clearchain", "aml", "crypto", "compliance", "blockchain", "ofac", "risk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/velasquezbrafael/ClearChain"
Documentation = "https://clearchain.vercel.app/docs"
Repository = "https://github.com/velasquezbrafael/ClearChain"

[tool.setuptools.packages.find]
where = ["."]
include = ["clearchain*"]
